# minter

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MINTER.md  README.md  SECURITY.md  SPECVAL.md  cliff.public.toml  cliff.toml  minter.config.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: cache_skip_unchanged.rs  directory_scaling.rs  large_tree_scaling.rs  single_discovery_pass.rs  validation_latency.rs
benches/common/: mod.rs
docs/: README.md  authoring-guide.md  cli-reference.md  configuration.md  coverage.md  development-workflow.md  getting-started.md  graph-cache.md  lock-and-ci.md  mcp.md  methodology.md  nfr-cross-reference.md  nfr-format.md  reference.md  spec-agent.md  spec-format.md
examples/: README.md  minter.config.json
examples/tests/: auth.test.ts  performance.bench.ts  tasks.test.ts
specs/: cli.spec  dsl-format.spec  graph-cache.spec  incremental-validation.spec  nfr-dsl-format.md  performance.nfr  validate-command.spec  validate-dependencies.spec  validate-display.spec  watch-mode.spec
specs/cli/: cli-display.spec  cli.spec  explain-command.spec  guide-command.spec
specs/core/: config.spec  dependency-resolution.spec  dsl-format.spec  explain-command.spec  format-command.spec  inspect-command.spec  nfr-dsl-format.spec  scaffold-command.spec  validate-command.spec  watch-command.spec
specs/format/: format-command.spec
specs/grammar/: nfr-grammar.spec  spec-grammar.spec
specs/graph/: graph-command.spec
specs/inspect/: inspect-command.spec
specs/mcp/: mcp-agent-guidance.spec  mcp-response-format.spec  mcp-server.spec
specs/nfr/: nfr-cross-reference.spec  operability.nfr  performance.nfr  reliability.nfr  security.nfr
specs/scaffold/: scaffold-command.spec
specs/validate/: dependency-resolution.spec  nfr-cross-reference.spec  validate-command.spec  validate-display.spec
src/: deps.rs  discover.rs  display.rs  explain.rs  format.rs  graph.rs  graph_cmd.rs  inspect.rs  lib.rs  main.rs  model.rs  nfr_crossref.rs  nfr_parser.rs  nfr_semantic.rs  parser.rs  parser.test.rs  scaffold.rs  semantic.rs  semantic.test.rs  validate.rs  watch.rs
tests/: benchmarks.rs  ci_command.rs  cli.rs  config.rs  coverage_command.rs  dsl_format.rs  explain_command.rs  format_command.rs  graph_cache.rs  graph_command.rs  guide_command.rs  incremental_validation.rs  inspect_command.rs  lock_command.rs  mcp_server.rs  nfr_cross_ref.rs  nfr_format.rs  scaffold_command.rs  ui_command.rs  validate_command.rs  validate_dependencies.rs  validate_display.rs  validate_spec.rs  watch_mode.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
(+117 files in other folders)
