[package]
name = "specval"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
pest = "2"
pest_derive = "2"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
notify = "7"
notify-debouncer-mini = "0.5"
ctrlc = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
libc = "0.2"
