[package]
name = "minter"
version = "1.1.1"
edition = "2024"
default-run = "minter"
rust-version = "1.85"
description = "Spec compiler and validator for structured behavioral specifications"
authors = ["Arnaud Lewis"]
license = "MIT"
repository = "https://github.com/arnaudlewis/minter"
homepage = "https://github.com/arnaudlewis/minter"
readme = "README.md"
keywords = ["spec", "validator", "dsl", "behavioral", "testing"]
categories = ["development-tools", "command-line-utilities"]
publish = false

[features]
default = ["web"]
web = ["dep:axum", "dep:tower-http", "dep:rust-embed", "dep:open"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
notify = "7"
notify-debouncer-mini = "0.5"
ctrlc = "3"
walkdir = "2"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
schemars = "0.8"
axum = { version = "0.8", optional = true, features = ["ws"] }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
rust-embed = { version = "8", optional = true }
open = { version = "5", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
libc = "0.2"

[[bin]]
name = "minter"
path = "src/main.rs"

[[bin]]
name = "minter-mcp"
path = "src/mcp/main.rs"

[[bench]]
name = "validation_latency"
harness = false

[[bench]]
name = "directory_scaling"
harness = false

[[bench]]
name = "single_discovery_pass"
harness = false

[[bench]]
name = "cache_skip_unchanged"
harness = false

[[bench]]
name = "large_tree_scaling"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
